<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewNumbers"
        android:layout_width="361dp"
        android:layout_height="60dp"
        android:textAlignment="textEnd"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/buttonEqual"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/button20"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/buttonComa"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
        app:layout_constraintStart_toEndOf="@+id/buttonNum0"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum3" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/buttonMinus"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNum6"
        app:layout_constraintTop_toBottomOf="@+id/buttonMult" />

    <Button
        android:id="@+id/buttonMult"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/buttonMulti"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNum9"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiv" />

    <Button
        android:id="@+id/buttonNum0"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/num_0"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum1" />

    <Button
        android:id="@+id/buttonNum1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/num_1"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum0"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum4"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/buttonNum2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/num_2"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum0"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum3"
        app:layout_constraintStart_toEndOf="@+id/buttonNum1"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum5" />

    <Button
        android:id="@+id/buttonNum3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/num_3"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/buttonNum2"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum6" />

    <Button
        android:id="@+id/buttonNum4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/num_4"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum1"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum7" />

    <Button
        android:id="@+id/buttonNum5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/num_5"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum2"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum6"
        app:layout_constraintStart_toEndOf="@+id/buttonNum4"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum8" />

    <Button
        android:id="@+id/buttonNum6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/num_6"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum3"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintStart_toEndOf="@+id/buttonNum5"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum9" />

    <Button
        android:id="@+id/buttonNum7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/num_7"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum4"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAc" />

    <Button
        android:id="@+id/buttonNum8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/num_8"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum5"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum9"
        app:layout_constraintStart_toEndOf="@+id/buttonNum7"
        app:layout_constraintTop_toBottomOf="@+id/buttonAc" />

    <Button
        android:id="@+id/buttonNum9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:text="@string/num_9"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum6"
        app:layout_constraintEnd_toStartOf="@+id/buttonMult"
        app:layout_constraintStart_toEndOf="@+id/buttonNum8"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiv" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/buttonPlus"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNum3"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonAc"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/buttonAC"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum7"
        app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumbers" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/buttonDiv"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAc"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumbers" />

</androidx.constraintlayout.widget.ConstraintLayout>